istio-rules/movies-circuit-breaker.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: movies
spec:
  host: movies
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
  subsets:
    - name: v1
      labels:
        version: v1
    - name: v2
      labels:
        version: v2
      trafficPolicy:
       outlierDetection:
          consecutiveErrors: 2
          interval: 1m
          baseEjectionTime: 5m
          maxEjectionPercent: 100
