istio-rules/movies-faultinjection.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: movies
spec:
  hosts:
  - movies
  http:
  - match:
    - sourceLabels:
        app: moviesuggestion-ui
        version: v1
    fault:
      delay:
        fixedDelay: 5s
      abort:
        percent: 50
        httpStatus: 400
    route:
    - destination:
        host: movies
        subset: v1
