istio-rules/movies-trafficsplit-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: movies
spec:
  hosts:
    - movies
  http:
    - route:
        - destination:
            host: movies
            subset: v1
          weight: 75
        - destination:
            host: movies
            subset: v2
          weight: 25
