istio-rules/movies-v3-vs-with-retry.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: movies
spec:
  hosts:
    - movies
  http:
  - route:
    - destination:
        host: movies
        subset: v3
    retries:
       attempts: 2
       perTryTimeout: 1s
       retryOn: retriable-4xx
